<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.soldiersofmobile"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gram_of_art_backgorund"
    android:paddingBottom="15dp"
    tools:ignore="ResAuto" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/art_1"
            android:visibility="visible" />

        <com.soldiersofmobile.views.CustomFontEditText
            android:id="@+id/add_photo_description_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textCursorDrawable="@null"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/compose_bg"
            android:gravity="top"
            android:hint="@string/enter_description"
            android:paddingBottom="7dp"
            android:cursorVisible="true"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="7dp"
            android:textColor="@color/light_grey"
            app:customFont="tw_cen_mt.ttf" />

        <com.soldiersofmobile.views.CustomFontTextView
            android:id="@+id/add_photo_location_tv"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/compose_bg"
            android:clickable="true"
            android:gravity="top"
            android:hint="@string/enter_location"
            android:onClick="onClick"
            android:paddingBottom="7dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="7dp"
            android:textColor="@color/light_grey"
            app:customFont="tw_cen_mt.ttf" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnIntend"
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_button_height"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:text="@string/btnIntend" />

            <Button
                android:id="@+id/add_photo_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_button_height"
                android:layout_marginLeft="1dp"
                android:layout_weight="1"
                android:text="@string/add_photo" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>