<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.soldiersofmobile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gram_of_art_backgorund" >

    <ImageView
        android:id="@+id/logo_iv"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:adjustViewBounds="true"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_iv"
        android:layout_marginLeft="@dimen/login_container_margin"
        android:layout_marginRight="@dimen/login_container_margin"
        android:layout_marginTop="@dimen/login_container_margin_top"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/login_border"
            android:paddingBottom="-3dp"
            android:paddingLeft="-2dp"
            android:paddingRight="1dp"
            android:paddingTop="-2dp" >

            <TextView
                android:id="@+id/login_label_tv"
                style="@style/LabelStyle"
                android:text="@string/email_text" />

            <EditText
                android:id="@+id/login_email_et"
                style="@style/GramOfArtEdittext"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@id/login_label_tv"
                android:layout_toRightOf="@id/login_label_tv" />

            <TextView
                android:id="@+id/password_label_tv"
                style="@style/LabelStyle"
                android:layout_below="@+id/separator_horizontal"
                android:text="@string/password_text" />

            <TextView
                android:id="@+id/separator_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_alignLeft="@id/login_label_tv"
                android:layout_alignRight="@id/login_label_tv"
                android:layout_below="@id/login_label_tv"
                android:layout_marginBottom="-1dp"
                android:layout_marginTop="-3dp"
                android:background="@color/black" />

            <EditText
                android:id="@+id/password_et"
                style="@style/GramOfArtEdittext"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@id/password_label_tv"
                android:layout_below="@+id/separator_horizontal_grey"
                android:layout_toRightOf="@id/password_label_tv"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/separator_horizontal_grey"
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_alignLeft="@id/login_email_et"
                android:layout_alignRight="@id/login_email_et"
                android:layout_below="@id/login_email_et"
                android:background="#1a1a1c" />

            <TextView
                android:id="@+id/separator_vertical"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/password_label_tv"
                android:layout_alignTop="@id/login_label_tv"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="-1.5dp"
                android:layout_toRightOf="@id/login_label_tv"
                android:background="@color/black" />
        </RelativeLayout>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_button_height"
            android:layout_marginTop="@dimen/login_button_margin_top"
            android:onClick="clickHandler"
            android:text="@string/login_text" />

        <Button
            android:id="@+id/sign_up_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_button_height"
            android:layout_marginTop="@dimen/login_button_margin_top"
            android:onClick="clickHandler"
            android:text="@string/sign_up_text" />

        <com.soldiersofmobile.views.CustomFontTextView
            android:id="@+id/connect_fb_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_button_height"
            android:layout_marginTop="@dimen/login_button_margin_top"
            android:background="@drawable/fb_button_background_selector"
            android:clickable="true"
            android:gravity="center"
            android:onClick="clickHandler"
            android:text="@string/connect_fb_text"
            android:textColor="@color/white"
            app:customFont="tw_cen_mt.ttf" />
    </LinearLayout>

</RelativeLayout>